- Application renamed to SmoekerSchriever -README updated - code change listener changed to evenstream for better performance