@@ -5,6 +5,12 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
+
+import javafx.beans.property.ObjectProperty;
+import javafx.beans.property.SimpleObjectProperty;
+
+import org.apache.log4j.Logger;
 
 import de.machmireinebook.epubeditor.epublib.domain.Book;
 import de.machmireinebook.epubeditor.epublib.domain.MediaType;
@@ -13,9 +19,6 @@ import de.machmireinebook.epubeditor.epublib.domain.Resource;
 import com.sun.net.httpserver.Headers;
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
-import javafx.beans.property.ObjectProperty;
-import javafx.beans.property.SimpleObjectProperty;
-import org.apache.log4j.Logger;
 
 /**
  * User: mjungierek
@@ -41,7 +44,7 @@ public class EpubHttpHandler implements HttpHandler
         if ("GET".equals(command) && book.get() != null)
         {
             String uri = requestURI.toString();
-            uri = URLDecoder.decode(uri, "UTF-8");
+            uri = URLDecoder.decode(uri, StandardCharsets.UTF_8);
             uri = uri.replaceFirst("/", "");
             Resource resource = book.get().getResources().getByHref(uri);
             if (resource != null)
